--- a/.github/workflows/step_detected.yml
+++ b/.github/workflows/step_detected.yml
@@ -25,7 +25,6 @@ jobs:
         id: detect
         run: |
           STEP_FILES=$(git diff --name-only --diff-filter=A HEAD~1 HEAD | grep -iE '\.(step|stp)$' | grep '^models/' || true)
-
           if [ -z "$STEP_FILES" ]; then
             echo "No new STEP files detected."
             echo "has_files=false" >> $GITHUB_OUTPUT
@@ -41,7 +40,7 @@ jobs:
         if: steps.detect.outputs.has_files == 'true'
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          FORM_BASE_URL: "https://github.com/abrunier3/S24-ArchitectingLunarBases/sysml_generator.html"
+          FORM_BASE_URL: "https://github.gatech.edu/pages/gatech-s24-team/s24-lunar-assets/sysml_generator.html"
           REPO: ${{ github.repository }}
           PUSHER: ${{ github.actor }}
           COMMIT_SHA: ${{ github.sha }}
@@ -51,66 +50,31 @@ jobs:
 
             STEP_FILE=$(basename "$STEP_PATH")
             STEM="${STEP_FILE%.*}"
-
-            echo "Processing: $STEP_FILE (stem: $STEM)"
-
-            # Create the model folder
             FOLDER="models/${STEM}"
-            mkdir -p "$FOLDER"
-            cat > "$FOLDER/.gitkeep" << GITKEEP
-# Folder created automatically for ${STEP_FILE}
-# Fill in the SysML file using the registration form and commit it here.
-GITKEEP
+            SHORT_SHA="${COMMIT_SHA:0:7}"
 
-            # Encode filename for URL
+            echo "Processing: $STEP_FILE"
+
+            mkdir -p "$FOLDER"
+            printf "# Folder created automatically for %s\n# Commit your %s.sysml here after filling the registration form.\n" "$STEP_FILE" "$STEM" > "$FOLDER/.gitkeep"
+
             ENCODED=$(python3 -c "import urllib.parse; print(urllib.parse.quote('${STEP_FILE}'))")
             FORM_URL="${FORM_BASE_URL}?step=${ENCODED}"
 
-            # Write issue body to file
-            cat > /tmp/BODY.md << BODY
-## New CAD Model Detected
+            printf "## New CAD Model Detected\n\n**File:** \`%s\`\n**Pushed by:** @%s\n**Commit:** \`%s\`\n**Model folder:** \`%s/\`\n\n---\n\n### Next step: Fill in the model attributes\n\nA folder has been created at \`%s/\`. You now need to generate the SysML metadata file.\n\n**Open the Model Registration Form:** %s\n\nThe form is pre-filled with the STEP file name. Fill in dimensions, orientation, material, units, and any custom attributes.\n\nOnce done, download the generated \`.sysml\` file and commit it to:\n\`%s/%s.sysml\`\n\n---\n*This issue was created automatically by the S24 DEE pipeline.*\n" \
+              "$STEP_PATH" "$PUSHER" "$SHORT_SHA" "$FOLDER" "$FOLDER" "$FORM_URL" "$FOLDER" "$STEM" > /tmp/BODY.md
 
-**File:** \`${STEP_PATH}\`
-**Pushed by:** @${PUSHER}
-**Commit:** \`${COMMIT_SHA:0:7}\`
-**Model folder:** \`${FOLDER}/\`
-
----
-
-### ✅ Next step: Fill in the model attributes
-
-A folder has been created at \`${FOLDER}/\`. You now need to generate the SysML metadata file.
-
-👉 **[Open the Model Registration Form](${FORM_URL})**
-
-The form is pre-filled with the STEP file name. Fill in:
-- Part name, material
-- Dimensions (length, width, height)
-- Position & orientation (X, Y, Z, rX, rY, rZ)
-- Units
-- Any custom attributes (mass, pressure, etc.)
-
-Once done, **download the generated \`.sysml\` file** and commit it to:
-\`\`\`
-${FOLDER}/${STEM}.sysml
-\`\`\`
-
----
-*This issue was created automatically by the S24 DEE pipeline.*
-BODY
-
-            # Create GitHub Issue (fallback without label if label doesn't exist)
             gh issue create \
               --repo "$REPO" \
-              --title "🛰️ New STEP file detected: ${STEP_FILE}" \
+              --title "New STEP file detected: ${STEP_FILE}" \
               --body-file /tmp/BODY.md \
               --label "model-registration" || \
             gh issue create \
               --repo "$REPO" \
-              --title "🛰️ New STEP file detected: ${STEP_FILE}" \
+              --title "New STEP file detected: ${STEP_FILE}" \
               --body-file /tmp/BODY.md
 
-            echo "✅ Done for $STEP_FILE"
+            echo "Done for $STEP_FILE"
           done
 
       - name: Commit new folders
